<resources>
    <string name="app_name">AndroidHomework</string>
    <string name="weather_placeholder_label_message">Weather summary should be displayed here</string>
    <string name="get_weather">Get weather</string>
    <string name="type_the_city">Type the city</string>
    <string name="connection_error">Connection error</string>
    <string name="connection_to_long">Connection take to long</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="city_name">City Name</string>
    <string name="city">City :</string>
    <string name="weather_type">Weather type :</string>
    <string name="temperature">Temperature :</string>
    <string name="pressure">Pressure :</string>
</resources>
